--- a/website v2.html
+++ b/website v2.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Cyclomatic Complexity Calculator</title>
+    <link rel="stylesheet" href="design.css" >
+    <img class="logo" src="cyclone.jpg" alt="logo">
 </head>
 <body>
     <h1>Cyclomatic Complexity Calculator</h1>
