--- a/loginScreen.html
+++ b/loginScreen.html
@@ -12,14 +12,21 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br><br>
         <button type="button" onclick="validateLogin()">Login</button>
+        <button type="button" onclick="location.href='signup.html'">Sign Up</button>
     </form>
 
     <script>
+        // Function to validate user login
         function validateLogin() {
             var username = document.getElementById("username").value;
             var password = document.getElementById("password").value;
-            if (username === "admin" && password === "abc123") {
-                window.location.href = "./website v2.html";
+            var users = JSON.parse(localStorage.getItem('users')) || [];
+            var isAuthenticated = users.some(function(user) {
+                return user.username === username && user.password === password;
+            });
+            if (isAuthenticated) {
+                alert("Login successful. Redirecting to index page...");
+                window.location.href = "website v2.html";
             } else {
                 alert("Invalid username or password. Please try again.");
             }
