--- a/website v2.html
+++ b/website v2.html
@@ -28,5 +28,11 @@
     
 
     <script src="script.js"></script>
+
+    <p>Cyclomatic Complexity Colour Key:<br></p>
+    <p id="greenCc">4 and lower - Easy to test<br></p>
+    <p id="purpleCc">5-7 - Tolerable<br></p>
+    <p id="orangeCc">8-10 - Refactoring should be considered<br></p>
+    <p id="redCc">11 and over - Difficult to test</p>
 </body>
 </html>
